# rgzdr2

./: .gitignore  LICENSE  MODULE.bazel  README.md  cutouts.py  rgz.py  test_cutouts.py  test_plot_classifications.ipynb
.github/workflows/: lint.yml
notebooks/: BUILD.bazel  README.md  jupyter.bzl  jupyter.py  reduced-classifications.ipynb
rgz/: BUILD.bazel  classifications.py  classifications_test.py  consensus.py  consensus_test.py  constants.py  cutouts.py  cutouts_test.py  main.py  plot_classifications.py  plot_classifications_test.py  pyproject.toml  requirements.txt  rgz.py  subjects.py  subjects_test.py  test_cutouts.py  testutils.py  units.py
rgz/.ipynb_checkpoints/: requirements-checkpoint.txt
rgz/testdata/: consensus.json  radio_classifications_test_subset.json  radio_classifications_test_subset_matched.json  radio_classifications_test_subset_processed.json  radio_subjects_test_subset.json  radio_subjects_test_subset_processed.json
rgz/testdata/first/: first_2014Dec17.csv
scripts/: create_first_test_catalogue.py  generate_golden_test_data.sh
