load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")

compile_pip_requirements(
    name = "requirements",
    src = "pyproject.toml",
    extra_args = ["--extra=cli"],
    requirements_txt = "requirements.txt",
)

py_binary(
    name = "main",
    srcs = ["main.py"],
    deps = [
        ":classifications",
        ":rgz",
        ":subjects",
        "@pypi//click",
    ],
)

py_library(
    name = "rgz",
    srcs = [
        "constants.py",
        "rgz.py",
        "units.py",
    ],
    deps = [
        "@pypi//astropy",
        "@pypi//matplotlib",
        "@pypi//requests",
    ],
)

py_library(
    name = "subjects",
    srcs = [
        "subjects.py",
    ],
    deps = [
        ":rgz",
        "@pypi//astropy",
        "@pypi//astroquery",
        "@pypi//attrs",
        "@pypi//backoff",
        "@pypi//requests",
        "@pypi//tqdm",
    ],
)

py_library(
    name = "cutouts",
    srcs = [
        "cutouts.py",
    ],
    deps = [
        ":rgz",
        "@pypi//astropy",
        "@pypi//pandas",
    ]
)

py_library(
    name = "classifications",
    srcs = [
        "classifications.py",
    ],
    deps = [
        ":rgz",
        ":subjects",
        "@pypi//astropy",
        "@pypi//astroquery",
        "@pypi//attrs",
        "@pypi//tqdm",
    ],
)

filegroup(
    name = "testdata",
    srcs = glob([
        "testdata/*.json",
        "testdata/first/*.json",
        "testdata/first/*.fits",
    ]),
)

py_test(
    name = "subjects_test",
    srcs = ["subjects_test.py"],
    data = [":testdata"],
    deps = [
        ":subjects",
        "@rules_python//python/runfiles",
    ],
)

py_test(
    name = "cutouts_test",
    srcs = ["cutouts_test.py"],
    deps = [
        ":cutouts",
        "@rules_python//python/runfiles",
    ],
)