load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")

package(default_visibility=["//notebooks:__pkg__"])

compile_pip_requirements(
    name="requirements",
    src="pyproject.toml",
    extra_args=["--extra=cli"],
    requirements_txt="requirements.txt",
)

py_binary(
    name="main",
    srcs=["main.py"],
    deps=[
        ":classifications",
        ":consensus",
        ":rgz",
        ":subjects",
        "@pypi//click",
    ],
)

py_library(
    name="rgz",
    srcs=[
        "constants.py",
        "rgz.py",
        "units.py",
    ],
    deps=[
        "@pypi//astropy",
        "@pypi//matplotlib",
        "@pypi//requests",
    ],
)

py_library(
    name="subjects",
    srcs=[
        "subjects.py",
    ],
    deps=[
        ":rgz",
        "@pypi//astropy",
        "@pypi//astroquery",
        "@pypi//attrs",
        "@pypi//backoff",
        "@pypi//requests",
        "@pypi//tqdm",
    ],
)

py_library(
    name = "cutouts",
    srcs = [
        "cutouts.py",
    ],
    deps = [
        ":rgz",
        "@pypi//astropy",
        "@pypi//pandas",
    ],
)

py_library(
    name = "classifications",
    srcs = [
        "classifications.py",
    ],
    deps=[
        ":rgz",
        ":subjects",
        "@pypi//astropy",
        "@pypi//astroquery",
        "@pypi//attrs",
        "@pypi//scipy",
        "@pypi//tqdm",
    ],
)

py_library(
    name="consensus",
    srcs=[
        "consensus.py",
    ],
    deps = [
        ":classifications",
        ":rgz",
        ":subjects",
        "@pypi//astropy",
        "@pypi//astroquery",
        "@pypi//attrs",
        "@pypi//scipy",
        "@pypi//tqdm",
    ],
)

py_library(
    name="testutils",
    srcs=[
        "testutils.py",
    ],
)

py_library(
    deps = [],
    name = "plot_classifications",
    srcs = [
        "plot_classifications.py",
    ],
    deps = [
        ":classifications",
        ":cutouts",
        ":rgz",
        ":subjects",
        "@pypi//astropy",
        "@pypi//matplotlib",
        "@pypi//numpy",
    ],
)

filegroup(
    name = "testdata",
    srcs = glob([
        "testdata/*.json",
        "testdata/first/*.csv",
        "testdata/first/*.json",
        "testdata/first/*.fits",
    ]),
)

py_test(
    name="subjects_test",
    srcs=["subjects_test.py"],
    data=[":testdata"],
    deps=[
        ":subjects",
        "@rules_python//python/runfiles",
    ],
)

py_test(
    name = "cutouts_test",
    srcs = ["cutouts_test.py"],
    deps = [
        ":cutouts",
        "@rules_python//python/runfiles",
    ],
)

py_test(
    name = "classifications_test",
    srcs = ["classifications_test.py"],
    data = [":testdata"],
    deps = [
        ":classifications",
        "@rules_python//python/runfiles",
    ],
)

py_test(
    name = "consensus_test",
    srcs = ["consensus_test.py"],
    data = [":testdata", ":testutils"],
    deps = [
        ":consensus",

py_test(
    name = "plot_classifications_test",
    srcs = ["plot_classifications_test.py"],
    deps = [
        ":classifications",
        ":plot_classifications",
        ":subjects",
        "@rules_python//python/runfiles",
    ],
)
