[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "rgzdr2"
version = "0.0.0"
dependencies = [
    "attrs",
    "requests",
    "matplotlib",
    "pandas",
    "tqdm",
    "astropy",
    "astroquery",
    "backoff",
    "line_profiler",
]

[project.optional-dependencies]
cli = ["click"]
test = ["line_profiler"]
