[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "rgzdr2"
version = "0.0.0"
# TODO: Fix development dependencies as optional.
dependencies = [
    "attrs",
    "requests",
    "matplotlib",
    "pandas",
    "tqdm",
    "astropy",
    "astroquery",
    "backoff",
    "line_profiler",
    "jupyter",
    "jupyterlab",
    "notebook",
    "jupyterlab-code-formatter",
    "black",
    "ipympl",
    "scipy",  # Needed for astropy.
]

[project.optional-dependencies]
cli = ["click"]
test = ["line_profiler"]

[tool.hatch.build.targets.wheel]
packages = ["rgz/"]